Chanhed space char to nbsp

--- a/templates/default/customer/customergrouplist.html
+++ b/templates/default/customer/customergrouplist.html
@@ -13,9 +13,9 @@
 	<THEAD>
 	<TR>
 		<TD scope="col" class="nobr">
-			{icon name="customergroup" fw=true} {trans("Name:")}
+			{icon name="customergroup" fw=true}&nbsp;{trans("Name:")}
 			<br>
-			<span class="lighter">{icon name="optional-info" fw=true} {trans("Description:")}</span>
+			<span class="lighter">{icon name="optional-info" fw=true}&nbsp;{trans("Description:")}</span>
 		</TD>
 		<TD scope="col" class="text-right lighter">
 			{trans("ID:")}
@@ -33,7 +33,7 @@
 	<TFOOT>
 	<TR>
 		<TD colspan="4" class="text-right bold nobr">
-			{icon name="info" fw=true} {trans("Total:")}
+			{icon name="info" fw=true}&nbsp;{trans("Total:")}
 			{$listdata.totalcount|default:"0"}
 		</TD>
 	</TR>
