--- a/templates/default/document/documentreference.html
+++ b/templates/default/document/documentreference.html
@@ -1,11 +1,11 @@
 {if $cid && $references}
-<TD>
+<td>
     {icon name="document" fw=true}
-</TD>
-<TD class="bold nobr">
-    {trans("Reference document:")}
-</TD>
-<TD class="nobr">
+</td>
+<td class="nobr">
+    <strong>{trans("Reference document:")}</strong>
+</td>
+<td class="nobr">
     <select name="document[reference]" {tip class="lms-ui-advanced-select" text="Select reference document" trigger="reference"}>
         <option value=""{if !$document.reference} selected{/if}>{trans("- none -")}</option>
         {foreach $references as $doc}
@@ -15,8 +15,10 @@
                 >{t a=$_DOCTYPES[$doc.type] b=$number c=$doc.cdate|date_format:"%Y/%m/%d"}$a no. $b issued on $c{/t}</option>
         {/foreach}
     </select>
-</TD>
+</td>
+
 <script>
+
     $(function() {
         $('[name="document[reference]"]').change(function() {
             if (parseInt($(this).val())) {
@@ -26,5 +28,6 @@
             }
         }).trigger('change');
     });
+
 </script>
 {/if}
