bugfix: fixed form param support in {customerlist} smarty elements

--- a/templates/default/document/documentlist.html
+++ b/templates/default/document/documentlist.html
@@ -64,7 +64,7 @@
 					<input type="hidden" name="m" value="documentlist">
 
 					<span class="bold">{trans("Filter:")}</span> {trans("Customer:")}
-					{customerlist form="page" customers=$customers selected=$filter.customer selectname="customer" inputname="c" firstoption="- all customers -"}
+					{customerlist form="documentlist" customers=$customers selected=$filter.customer selectname="customer" inputname="c" firstoption="- all customers -"}
 
 					<input type="hidden" name="t[]" value="0">
 					<label>
