--- a/templates/default/netdev/netdevmodify.html
+++ b/templates/default/netdev/netdevmodify.html
@@ -11,7 +11,7 @@
 
 <script type="text/javascript" src="js/location_box.js"></script>
 
-<form name="netdev" method="post" action="?m={$layout.module}{if $layout.module == 'netdevedit'}&id={$netdev.id}{/if}">
+<form name="netdev" id="netdev" method="post" action="?m={$layout.module}{if $layout.module == 'netdevedit'}&id={$netdev.id}{/if}">
 	<input type="submit" class="hiddenbtn">
 
 	{box_container id="netdev"}
