--- a/templates/default/traffic/traffic.html
+++ b/templates/default/traffic/traffic.html
@@ -79,7 +79,7 @@
 	{/if}
 </TABLE>
 {else}
-<FORM NAME="traffic" METHOD="POST" ACTION="?m=traffic&amp;bar=user">
+<form name="traffic" id="traffic" method="POST" action="?m=traffic&bar=user">
 <INPUT type="submit" class="hiddenbtn">
 <TABLE class="lmsbox">
 	<colgroup>
@@ -201,6 +201,6 @@
 	</TR>
     </TBODY>
 </TABLE>
-</FORM>
+</form>
 {/if}
 {/block}
