--- a/templates/default/rt/rtprintindex.html
+++ b/templates/default/rt/rtprintindex.html
@@ -3,7 +3,7 @@
 {block name=module_content}
 <!--// $Id$ //-->
 <H1>{$layout.pagetitle}</H1>
-<FORM method="post" name="ticketslist" id="ticketslist" action="?m=rtprint&amp;type=ticketslist" target="_blank">
+<form method="post" name="ticketslist" id="ticketslist" action="?m=rtprint&type=ticketslist" target="_blank">
 <INPUT type="submit" class="hiddenbtn">
 <TABLE class="lmsbox">
     <THEAD>
@@ -163,7 +163,7 @@
 	</TR>
     </TBODY>
 </TABLE>
-</FORM>
+</form>
 <FORM method="post" name="stats" id="stats" action="?m=rtprint&amp;type=stats" target="_blank">
 <INPUT type="submit" class="hiddenbtn">
 <TABLE class="lmsbox">
