--- a/templates/default/customer/customergrouplist.html
+++ b/templates/default/customer/customergrouplist.html
@@ -13,8 +13,9 @@
 	<THEAD>
 	<TR>
 		<TD scope="col" class="nobr">
-			<IMG src="img/group.gif" alt=""> {trans("Name:")}<BR>
-			<span class="lighter"><IMG src="img/info1.gif" alt=""> {trans("Description:")}</span>
+			{icon name="customergroup" fw=true}&nbsp;{trans("Name:")}
+			<br>
+			<span class="lighter">{icon name="optional-info" fw=true}&nbsp;{trans("Description:")}</span>
 		</TD>
 		<TD scope="col" class="text-right lighter">
 			{trans("ID:")}
@@ -32,7 +33,7 @@
 	<TFOOT>
 	<TR>
 		<TD colspan="4" class="text-right bold nobr">
-			<IMG src="img/info2.gif" alt=""> {trans("Total:")}
+			{icon name="info" fw=true}&nbsp;{trans("Total:")}
 			{$listdata.totalcount|default:"0"}
 		</TD>
 	</TR>
@@ -41,8 +42,8 @@
 	{foreach $customergrouplist as $customergroup}
 	<TR class="highlight" data-target-url="?m=customergroupinfo&id={$customergroup.id}" data-name="{$customergroup.name}">
 		<TD>
-			<IMG src="img/group.gif" alt="">&nbsp;<span class="bold">{$customergroup.name}</span><BR>
-			{if $customergroup.description}<IMG src="img/info1.gif" alt="">&nbsp;{$customergroup.description|escape|replace:"\n":"<BR>"}{/if}
+			{icon name="customergroup" fw=true}&nbsp;<span class="bold">{$customergroup.name}</span><BR>
+			{if $customergroup.description}{icon name="optional-info" fw=true}&nbsp;{$customergroup.description|escape|replace:"\n":"<BR>"}{/if}
 		</TD>
 		<TD class="text-right">
 			({$customergroup.id|string_format:"%04d"})
