bugfix: fixed syntax error

--- a/templates/default/customer/customersearch.html
+++ b/templates/default/customer/customersearch.html
@@ -541,7 +541,7 @@
 	</TR>
 	<TR>
 		<TD class="bold nobr">
-			{icon name=customergroup"" fw=true} {trans("Group:")}
+			{icon name="customergroup" fw=true} {trans("Group:")}
 		</TD>
 		<TD>
 			<SELECT SIZE="1" name="g[]" multiple class="lms-ui-multiselect">
